<resources>
    <string name="app_name">哔哩哔哩</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_channel">频道</string>
    <string name="main_tab_dynamic">动态</string>
    <string name="main_tab_vipbuy">会员购</string>

    <string name="drawer_home">首页</string>
    <string name="drawer_historyrecord">历史记录</string>
    <string name="drawer_offlinecach">离线缓存</string>
    <string name="drawer_collection">我的收藏</string>
    <string name="drawer_follow">我的关注</string>
    <string name="drawer_waitlook">稍候再看</string>
    <string name="drawer_onlivecenter">直播中心</string>
    <string name="drawer_vip">我的大会员</string>
    <string name="drawer_freeflow">免流量服务</string>
    <string name="drawer_vipbuy">会员购中心</string>
    <string name="drawer_custom">联系客服</string>
    <string name="drawer_sets">设置</string>
    <string name="drawer_theme">主题</string>
    <string name="drawer_night">夜间</string>
    <string name="double_click_to_exit">再按一次退出</string>

    <!--toolbar tab-->
    <string name="main_download">下载</string>
    <string name="main_connectioin">消息</string>

    <!--RecommendFragment-->
    <string name="recommend_home_comprehensive">综合</string>
    <string name="recommend_home_rank_list">排行榜</string>
    <string name="recommend_home_tag">标签</string>
    <string name="recommend_home_update_to_last_index">更新至第$1%d话</string>

    <!--VideoDetailActivity-->
    <string name="v_detail_play_immediately">立刻播放</string>
    <string name="v_detail_summary">简介</string>
    <string name="v_detail_evaluate">评论(%1$d)</string>


    <!--视频播放-->
    <string name="tips_not_wifi">您当前正在使用移动网络，继续播放将消耗流量</string>
    <string name="tips_not_wifi_confirm">继续播放</string>
    <string name="no_net">当前找不到网络</string>
    <string name="tips_not_wifi_cancel">停止播放</string>
    <string name="no_url">播放地址无效</string>
</resources>
